--- a/biodata.html
+++ b/biodata.html
@@ -19,12 +19,12 @@
   <div class="container">
     <section>
       <h2>Personal Details</h2>
-      <p><strong>Name:</strong> [Your Full Name]</p>
+      <p><strong>Name:</strong>Smaran Bopanna</p>
       <p><strong>Age:</strong> 20</p>
-      <p><strong>Gender:</strong> [Your Gender]</p>
-      <p><strong>Address:</strong> [Your Address]</p>
-      <p><strong>Date of Birth:</strong> [Your DOB]</p>
-      <p><strong>Nationality:</strong> [Your Nationality]</p>
+      <p><strong>Gender:</strong>Male</p>
+      <p><strong>Address:</strong>-----</p>
+      <p><strong>Date of Birth:</strong>------</p>
+      <p><strong>Nationality:</strong>Indian</p>
     </section>
 
     <section>
@@ -39,15 +39,15 @@
     <section>
       <h2>Languages Known</h2>
       <ul>
-        <li>[Language 1]</li>
-        <li>[Language 2]</li>
+        <li>English</li>
+        <li>Kannada</li>
       </ul>
     </section>
 
     <section>
       <h2>Contact Information</h2>
-      <p><strong>Email:</strong> [Your Email]</p>
-      <p><strong>Phone:</strong> [Your Phone]</p>
+      <p><strong>Email:</strong>abc123@gmail.com</p>
+      <p><strong>Phone:</strong>+91 1234567890</p>
     </section>
   </div>
 
@@ -57,3 +57,4 @@
 
 </body>
 </html>
+
