--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>[Your Full Name]</h1>
+    <h1>Smaran Bopanna</h1>
     <p>B.E. Computer Science & Engineering Undergraduate</p>
   </header>
 
@@ -36,8 +36,8 @@
 
     <section>
       <h2>Contact</h2>
-      <p><strong>Email:</strong> [Your Email]</p>
-      <p><strong>Phone:</strong> [Your Phone Number]</p>
+      <p><strong>Email:</strong>abc123@gmail.com</p>
+      <p><strong>Phone:</strong>+91 1234567890</p>
     </section>
   </div>
 
@@ -53,3 +53,4 @@
   
 </body>
 </html>
+
