--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>[Your Full Name]</h1>
+    <h1>Smaran Bopanna</h1>
     <p>B.E. Computer Science & Engineering Undergraduate</p>
   </header>
 
@@ -20,11 +20,11 @@
   <div class="container">
     <section>
       <h2>Personal Information</h2>
-      <p><strong>Name:</strong> [Your Full Name]</p>
+      <p><strong>Name:</strong>Smaran Bopanna</p>
       <p><strong>Age:</strong> 20</p>
-      <p><strong>Address:</strong> [Your Address]</p>
-      <p><strong>Email:</strong> [Your Email]</p>
-      <p><strong>Phone:</strong> [Your Phone]</p>
+      <p><strong>Address:</strong>------</p>
+      <p><strong>Email:</strong>abc123@gmail.com</p>
+      <p><strong>Phone:</strong>+91 123456789</p>
       <button id="toggleContact">Show/Hide Links</button>
       <div id="contactInfo">
         <p><strong>LinkedIn:</strong> [LinkedIn URL]</p>
@@ -45,7 +45,7 @@
       <h2>Education</h2>
       <ul>
         <li><strong>B.E. in Computer Science and Engineering</strong> – Coorg Institute of Technology, Ponnampet, Kodagu (2023–2027)</li>
-        <li><strong>Higher Secondary Education</strong> – [Your School Name]</li>
+        <li><strong>Higher Secondary Education</strong> – Nalanda Gurukula International Public School</li>
       </ul>
     </section>
 
@@ -60,7 +60,7 @@
 
     <section>
       <h2>Interests</h2>
-      <p>Reading, Sketching, Badminton, Exploring Tech Innovations</p>
+      <p>Reading, Editing , Badminton, Exploring Tech Innovations</p>
     </section>
 
     <section>
@@ -91,3 +91,4 @@
   </script>
 </body>
 </html>
+
